# lexime-trie

./: Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.ja.md  SPEC.md  mise.toml
.github/workflows/: ci.yml
benches/: search.rs
src/: build.rs  code_map.rs  da_ref.rs  label.rs  lib.rs  node.rs  search.rs  serial.rs  view.rs
